# mdpreview

./: CHANGELOG.md  CLAUDE.md  INSTALL.md  PRD.md  README.md  mdp  mdpreview.py  package.json  pyproject.toml  test-visual.md  test_mdpreview.py  test_table.md  tsconfig.json
.github/workflows/: release.yml  test.yml
ai/specs/: local-image-support.md
docs/: bun_implementation_plan.md  e2e-visual-verification.md
src/: cli.ts
src/browser/: launcher.ts
src/core/: cache.ts  hash.ts  markdown.ts
src/mdpreview/: __init__.py  __main__.py  cli.py  mdp.py
src/processors/: images.ts  mermaid.ts
src/rendering/: styles.ts  template.ts
test/: create_test_image.py  create_test_images.py  demo.md  image_demo.md  test_images.md  wide_table_test.md
tests/e2e/: visual.test.ts
tests/integration/: e2e.test.ts
tests/unit/: cache.test.ts  cli.test.ts  hash.test.ts  images.test.ts  launcher.test.ts  markdown.test.ts  mermaid.test.ts  styles.test.ts  template.test.ts
