[project]
name = "mdpreview"
version = "0.1.0"
description = "A fast CLI tool for converting Markdown to HTML and opening in browser"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.5.0",
    "pygments>=2.15.0",
]

[project.scripts]
mdpreview = "mdpreview:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"