[project]
name = "mdpreview"
version = "0.1.0"
description = "A fast CLI tool for converting Markdown to HTML and opening in browser"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.5.0",
    "pygments>=2.15.0",
]
keywords = ["markdown", "preview", "html", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/mdpreview"
Documentation = "https://github.com/yourusername/mdpreview#readme"
Repository = "https://github.com/yourusername/mdpreview.git"
Issues = "https://github.com/yourusername/mdpreview/issues"

[project.scripts]
mdpreview = "mdpreview:main"
mdp = "mdpreview.mdp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdpreview"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]